--- a/dev/assets/styles/parts/_components.scss
+++ b/dev/assets/styles/parts/_components.scss
@@ -41,3 +41,4 @@
 @import './components/layouts';
 @import './components/awards';
 @import './components/objects-map';
+@import './components/tags';
