--- a/dev/assets/styles/parts/_modal-windows.scss
+++ b/dev/assets/styles/parts/_modal-windows.scss
@@ -2,3 +2,10 @@
 @import './modal-windows/simple-info';
 @import './modal-windows/m-form';
 @import './modal-windows/m-image-gallary';
+@import './modal-windows/m-do-you-need-expert-help';
+@import './modal-windows/m-object-added-to-favorites';
+@import './modal-windows/m-site-evaluation';
+@import './modal-windows/m-delete-everything';
+@import './modal-windows/m-get-brochure';
+@import './modal-windows/m-thanks-feedback';
+@import './modal-windows/m-share-your-impressions';
