--- a/dev/pages/include/layouts/header.html
+++ b/dev/pages/include/layouts/header.html
@@ -1,4 +1,4 @@
-<div class="header__block-insight">
+<div class="header__block-insight" data-smooth-scrolling="header">
     <div class="main-container max-width">
         @include('../components/main-nav.html')
         <div class="header__wrapper-contacts">
