--- a/dev/pages/include/modal-windows/m-delete-everything.html
+++ b/dev/pages/include/modal-windows/m-delete-everything.html
@@ -1,4 +1,4 @@
-<div class="modal modal--size--md simple-info" data-modal="modal" id="m-delete-everything">
+<div class="modal modal--size--md simple-info m-delete-everything" data-modal="modal" id="m-delete-everything">
     <div class="modal__wrap">
         <div class="modal__window">
             <button data-modal="close" class="modal__close">
