--- a/dev/pages/include/modal-windows/more-filters.html
+++ b/dev/pages/include/modal-windows/more-filters.html
@@ -6,7 +6,7 @@
                     <use xlink:href="./assets/icons/sprite-svg.svg#cross"/>
                 </svg>
             </button>
-            <div class="more-filters__wrapper-filters">
+            <div class="more-filters__wrapper-filters" data-scrollbar>
                 <div class="more-filters__block-filters">
                     <h4 class="title-section title-reset">More Filters</h4>
                     <div class="more-filters__block-filter">
@@ -153,6 +153,170 @@
                             <button type="button" class="more-filters__btn-more-properties">All properties</button>
                         </div>
                     </div>
+                    <!--  -->
+                    <div class="more-filters__wrapper-block-filter">
+                        <div class="more-filters__block-filter">
+                            <div class="more-filters__block-name-filter">
+                                <span class="more-filters__name-filter">Bedrooms</span>
+                            </div>
+                            <div class="more-filters__block-filter-select">
+                                <ul class="more-filters__list-select list-reset">
+                                    <li class="more-filters__li-select">
+                                        <span class="more-filters__sign-object">Min</span>
+                                        <div class="select select--size--sm select--theme--light-blue" data-select="block-select">
+                                            <div class="select__inner">
+                                                <button type="button" class="select__btn" data-select="btn">
+                                                    <span class="select__btn-text">1</span>
+                                                    <svg class="select__btn-icon">
+                                                        <use xlink:href="./assets/icons/sprite-svg.svg#arrow-down"></use>
+                                                    </svg>
+                                                </button>
+                                                <div class="select__block-pop-up" data-scrollbar>
+                                                    <ul class="select__list list-reset">
+                                                        <li class="select__li">
+                                                            <a href="#" class="select__link link-reset">2</a>
+                                                        </li>
+                                                        <li class="select__li">
+                                                            <a href="#" class="select__link link-reset">3</a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="more-filters__li-select">
+                                        <span class="more-filters__sign-object">Max</span>
+                                        <div class="select select--size--sm select--theme--light-blue" data-select="block-select">
+                                            <div class="select__inner">
+                                                <button type="button" class="select__btn" data-select="btn">
+                                                    <span class="select__btn-text">5+</span>
+                                                    <svg class="select__btn-icon">
+                                                        <use xlink:href="./assets/icons/sprite-svg.svg#arrow-down"></use>
+                                                    </svg>
+                                                </button>
+                                                <div class="select__block-pop-up" data-scrollbar>
+                                                    <ul class="select__list list-reset">
+                                                        <li class="select__li">
+                                                            <a href="#" class="select__link link-reset">3</a>
+                                                        </li>
+                                                        <li class="select__li">
+                                                            <a href="#" class="select__link link-reset">4</a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="more-filters__block-filter">
+                            <div class="more-filters__block-name-filter">
+                                <span class="more-filters__name-filter">Bedrooms</span>
+                            </div>
+                            <div class="more-filters__block-filter-select">
+                                <ul class="more-filters__list-select list-reset">
+                                    <li class="more-filters__li-select">
+                                        <span class="more-filters__sign-object">Min</span>
+                                        <div class="select select--size--sm select--theme--light-blue" data-select="block-select">
+                                            <div class="select__inner">
+                                                <button type="button" class="select__btn" data-select="btn">
+                                                    <span class="select__btn-text">1</span>
+                                                    <svg class="select__btn-icon">
+                                                        <use xlink:href="./assets/icons/sprite-svg.svg#arrow-down"></use>
+                                                    </svg>
+                                                </button>
+                                                <div class="select__block-pop-up" data-scrollbar>
+                                                    <ul class="select__list list-reset">
+                                                        <li class="select__li">
+                                                            <a href="#" class="select__link link-reset">2</a>
+                                                        </li>
+                                                        <li class="select__li">
+                                                            <a href="#" class="select__link link-reset">3</a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="more-filters__li-select">
+                                        <span class="more-filters__sign-object">Max</span>
+                                        <div class="select select--size--sm select--theme--light-blue" data-select="block-select">
+                                            <div class="select__inner">
+                                                <button type="button" class="select__btn" data-select="btn">
+                                                    <span class="select__btn-text">5+</span>
+                                                    <svg class="select__btn-icon">
+                                                        <use xlink:href="./assets/icons/sprite-svg.svg#arrow-down"></use>
+                                                    </svg>
+                                                </button>
+                                                <div class="select__block-pop-up" data-scrollbar>
+                                                    <ul class="select__list list-reset">
+                                                        <li class="select__li">
+                                                            <a href="#" class="select__link link-reset">3</a>
+                                                        </li>
+                                                        <li class="select__li">
+                                                            <a href="#" class="select__link link-reset">4</a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <!--  -->
+                    <!--  -->
+                    <div class="more-filters__wrapper-block-filter">
+                        <div class="more-filters__block-filter">
+                            <div class="more-filters__block-name-filter">
+                                <span class="more-filters__name-filter">Square meter (m²)</span>
+                            </div>
+                            <div class="more-filters__block-filter-input">
+                                <ul class="more-filters__list-input list-reset">
+                                    <li class="more-filters__li-input">
+                                        <span class="more-filters__sign-object">Min</span>
+                                        <div class="input" data-input="block-input">
+                                            <input type="text" class="input__input" data-input="input">
+                                            <span class="input__placeholder" data-input="placeholder">25 m²</span>
+                                        </div>
+                                    </li>
+                                    <li class="more-filters__li-input">
+                                        <span class="more-filters__sign-object">Max</span>
+                                        <div class="input" data-input="block-input">
+                                            <input type="text" class="input__input" data-input="input">
+                                            <span class="input__placeholder" data-input="placeholder">300 m²</span>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="more-filters__block-filter">
+                            <div class="more-filters__block-name-filter">
+                                <span class="more-filters__name-filter">Square meter (m²)</span>
+                            </div>
+                            <div class="more-filters__block-filter-input">
+                                <ul class="more-filters__list-input list-reset">
+                                    <li class="more-filters__li-input">
+                                        <span class="more-filters__sign-object">Min</span>
+                                        <div class="input" data-input="block-input">
+                                            <input type="text" class="input__input" data-input="input">
+                                            <span class="input__placeholder" data-input="placeholder">99 TL</span>
+                                        </div>
+                                    </li>
+                                    <li class="more-filters__li-input">
+                                        <span class="more-filters__sign-object">Max</span>
+                                        <div class="input" data-input="block-input">
+                                            <input type="text" class="input__input" data-input="input">
+                                            <span class="input__placeholder" data-input="placeholder">99999 TL</span>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <!--  -->
                     <div class="more-filters__block-filter">
                         <div class="more-filters__block-name-filter">
                             <span class="more-filters__name-filter">Residential complexes</span>
@@ -721,15 +885,17 @@
                 </div>
             </div>
             <div class="more-filters__block-links">
-                <a href="#" class="btn-icon btn-icon--theme--navy-blue">
+                <a href="#" class="btn-icon btn-icon--theme--navy-blue hint">
                     <svg class="btn-icon__icon">
                         <use xlink:href="./assets/icons/sprite-svg.svg#three-stripes"/>
                     </svg>
+                    <span class="hint__text">Search on listing</span>
                 </a>
-                <a href="#" class="btn-icon btn-icon--theme--navy-blue">
+                <a href="#" class="btn-icon btn-icon--theme--navy-blue hint">
                     <svg class="btn-icon__icon">
                         <use xlink:href="./assets/icons/sprite-svg.svg#point"/>
                     </svg>
+                    <span class="hint__text">Search on map</span>
                 </a>
             </div>
         </div>
