--- a/dev/pages/include/ui/back-top.html
+++ b/dev/pages/include/ui/back-top.html
@@ -1,5 +1,5 @@
 <div class="back-top">
-    <a href="#" class="back-top__link">
+    <a href="##" class="back-top__link" data-smooth-scrolling="#header">
         <svg class="back-top__icon">
             <use xlink:href="./assets/icons/sprite-svg.svg#arrow-up"/>
         </svg>
