--- a/dev/pages/include/ui/select.html
+++ b/dev/pages/include/ui/select.html
@@ -1,4 +1,4 @@
-<div class="select search-bar__select-residential" data-select="block-select">
+<div class="select" data-select="block-select">
     <div class="select__inner">
         <button type="button" class="select__btn" data-select="btn">
             <span class="select__btn-text">Residential</span>
