--- a/dev/assets/styles/parts/modal-windows/m-form.scss
+++ b/dev/assets/styles/parts/modal-windows/m-form.scss
@@ -36,6 +36,106 @@
         }
     }
 
+    &__block-add-photos {
+        margin-top: 16px;
+        padding-bottom: 10px;
+
+        .scroll-content {
+            display: grid;
+            grid-auto-flow: column;
+            grid-column-gap: 16px;
+            justify-content: start;
+        }
+    }
+
+    &__add-photos-block-photos {
+        display: grid;
+        grid-auto-columns: 85px;
+        grid-column-gap: 10px;
+        grid-auto-flow: column;
+    }
+
+    &__add-photos-block-photo {
+        position: relative;
+        width: 85px;
+        height: 85px;
+        border-radius: 10px;
+        overflow: hidden;
+
+        &--add-photo {
+            transition: opacity $transition-time;
+
+            &:hover {
+                opacity: 0.6;
+            }
+
+            label {
+                cursor: pointer;
+            }
+
+            input {
+                position: absolute;
+                opacity: 0;
+                visibility: hidden;
+                width: 0;
+                height: 0;
+            }
+        }
+    }
+
+    &__add-photos-photo {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+    }
+
+    &__add-photos-block-icon {
+        position: absolute;
+        top: 0;
+        right: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 28px;
+        height: 28px;
+    }
+
+    &__add-photos-icon {
+        width: 16px;
+        height: 16px;
+        cursor: pointer;
+        transition: opacity $transition-time;
+
+        &:hover {
+            opacity: 0.6;
+        }
+    }
+
+    &__add-photos-block-info {
+        display: grid;
+    }
+
+    &__add-photos-title {
+        @include adaptiv-font(18, 16);
+        font-weight: 600;
+    }
+
+    &__add-photos-subtitle,
+    &__add-photos-note {
+        font-weight: 500;
+    }
+
+    &__add-photos-subtitle {
+        margin-top: 10px;
+    }
+
+    &__add-photos-note {
+        margin-top: 8px;
+        font-size: 12px;
+        color: $light-text;
+    }
+
     .btn {
         width: 100%;
         margin-top: 16px;
