--- a/dev/assets/styles/parts/modal-windows/more-filters.scss
+++ b/dev/assets/styles/parts/modal-windows/more-filters.scss
@@ -5,11 +5,26 @@
         overflow-y: auto;
         overflow-x: hidden;
         height: 89%;
+
+        .scroll-content {
+            width: 98%;
+        }
     }
 
     &__block-filters {
         &:not(:first-child) {
             margin-top: 40px;
+        }
+    }
+
+    &__wrapper-block-filter {
+        display: grid;
+        grid-auto-columns: 1fr;
+        grid-auto-flow: column;
+        margin-top: 30px;
+
+        .more-filters__block-filter:not(:first-child) {
+            margin-top: 0;
         }
     }
 
@@ -84,6 +99,60 @@
         .btn-icon {
             &:not(:last-child) {
                 margin-right: 6px;
+            }
+        }
+    }
+
+    &__sign-object {
+        color: $light-text;
+        font-weight: 500;
+        font-size: 14px;
+        margin-bottom: 2px;
+    }
+
+    &__block-filter-input .more-filters__list-input,
+    &__block-filter-select .more-filters__list-select {
+        display: grid;
+        grid-template-columns: repeat(2, minmax(131px, 160px));
+        grid-column-gap: 8px;
+        grid-row-gap: 8px;
+        margin-top: 12px;
+    }
+
+    &__block-filter-input {
+        .input {
+            &.active {
+                .input__placeholder {
+                    transform: translate(-4%, -110%) scale(0.75);
+                }
+            }
+        }
+    }
+
+    &__block-filter-select {
+        .select {
+            width: 100%;
+
+            &--size--sm {
+                .select__block-pop-up {
+                    left: 0;
+                    transform: translate(0, 0);
+                }
+                
+                &.active {
+                    .select__block-pop-up {
+                        transform: translate(0, 6px);
+                    }
+                }
+            }
+
+            &__inner,
+            &__btn {
+                width: 100%;
+            }
+
+            &__btn {
+                justify-content: space-between;
             }
         }
     }
